fix z-index of bubbles effect

--- a/src/BubbleEffect/BubblesEffect.css
+++ b/src/BubbleEffect/BubblesEffect.css
@@ -26,7 +26,6 @@
 	list-style-type: none;
 	width: 50px;
 	height: 50px;
-	z-index: 10;
 }
 .background__bg-bubbles li div {
 	width: 100%;
